# python-clean-architecture

./: LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 25890a85f01f_init.py  37060b028d25_create_account_and_activity_table.py  8692f3902e1c_add_data_for_demo.py
docker/: Dockerfile
docs/: dev_env_setup.md
src/: container.py  main.py
src/account/application/domain/entity/: account.py  activity.py  activity_window.py  money.py
src/adapter/inward/web/: router.py
src/adapter/outward/persistence/: account_lock.py  account_mapper.py  account_not_found_exception.py  account_persistence_adapter.py  account_repository.py  account_sqlalchemy_base.py  activity_repository.py  activity_sqlalchemy_base.py  database.py
src/application/domain/entity/: account.py  account_not_persisted_exception.py  activity.py  activity_window.py  money.py
src/application/port/outward/: account_lock.py  load_account_port.py  update_account_state_port.py
src/common/: container.py
tests/: conftest.py
tests/adapter/inward/web/: test_send_money_controller.py
tests/adapter/outward/persistence/: test_account_persistence_adapter.py
tests/application/domain/entity/: test_account.py  test_activity_window.py
tests/application/domain/service/: test_send_money_service.py
tests/application/port/inward/: test_send_money_command.py
tests/common/: account_test_builder.py  activity_test_builder.py
tests/integration/: test_send_money.py
tests/resources/integration/: send_money_integration_test.sql
(+23 files in other folders)
