[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_clean_architecture"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
