[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_clean_architecture"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
dependency-injector = "^4.41.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
mypy = "^1.9.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
